force-app/main/default/objects/shopitem__c/shopitem__c.object-meta.xml
<CustomObject>
    <label>shopitem</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>shopitem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>shopitems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>