force-app/main/default/objects/shopitem__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <label>Image</label>
    <length>254</length>
    <type>Text</type>
</CustomField>