force-app/main/default/objects/shopitem__c/fields/product_id__c.field-meta.xml
<CustomField>
    <fullName>product_id__c</fullName>
    <externalId>true</externalId>
    <label>product_id</label>
    <length>49</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>