force-app/main/default/objects/shopitem__c/fields/specialoffer__c.field-meta.xml
<CustomField>
    <fullName>specialoffer__c</fullName>
    <label>specialoffer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>